<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/outlet_primary_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/otp_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp_hint"
            android:inputType="number"
            android:maxLength="6"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/button_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_verify"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/button_resend"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_resend"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:id="@+id/otp_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:visibility="gone" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
